# dental-backend

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INFRASTRUCTURE_SUMMARY.md  Makefile  PROJECT_BRIEF.md  README.md  alembic.ini  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  settings.yaml
docs/: DATABASE_SETUP.md  EPIC_E3_SUMMARY.md  EPIC_E4_SUMMARY.md  EPIC_E5_SUMMARY.md  EPIC_E6_SUMMARY.md  EPIC_E7_SUMMARY.md  EPIC_E8_SUMMARY.md  ERD.md
infrastructure/: Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  s3-bucket-policy.json  s3-lifecycle-policy.json
infrastructure/terraform/: s3.tf
migrations/: env.py
migrations/versions/: 5c956ad7ccec_initial_database_schema.py
models/: README.md
scripts/: check_db_state.py  setup_dev_environment.py  test_api_endpoints.py  test_database.py  test_geometry_system.py  test_infrastructure.py  test_preprocessing_system.py  test_security.py  test_upload_pipeline.py  test_worker_system.py
services/api/: __init__.py  pyproject.toml
services/api/dental_backend/api/: auth.py  cases.py  compliance.py  dependencies.py  files.py  geometry.py  jobs.py  main.py  preprocessing.py  segments.py  uploads.py
services/worker/: __init__.py  pyproject.toml
services/worker/dental_backend/worker/: celery.py  tasks.py
tests/: __init__.py
tests/fixtures/: sample_meshes.py
tests/unit/: test_basic.py
