[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dental-backend-worker"
version = "0.1.0"
description = "Background worker service for dental backend system"
requires-python = ">=3.10"
dependencies = [
    "dental-backend-common",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "structlog>=23.2.0",
    "trimesh>=4.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
